<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="104dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_info_img"
        android:layout_width="88dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/information" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_item_info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/date_place_holder2"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/item_info_img"
        app:layout_constraintTop_toTopOf="@+id/item_info_img" />

    <TextView
        android:id="@+id/tv_item_info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ibm_plex_sans"
        android:maxLines="3"
        android:text="@string/lorem"
        android:textColor="@color/dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_info_img"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_info_date" />


</androidx.constraintlayout.widget.ConstraintLayout>